--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jest": "^21.2.1"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0"
   }
 }
